--- a/package.json
+++ b/package.json
@@ -17,7 +17,8 @@
     "react-dom": "^19.0.0",
     "react-icons": "^5.5.0",
     "react-router-dom": "^7.5.3",
-    "sweetalert2": "^11.19.1"
+    "sweetalert2": "^11.19.1",
+    "swiper": "^11.2.6"
   },
   "devDependencies": {
     "@eslint/js": "^9.22.0",
