--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@clerk/clerk-react": "^5.31.1",
     "@smastrom/react-rating": "^1.5.0",
     "@tanstack/react-query": "^5.75.1",
     "axios": "^1.9.0",
