--- a/.env
+++ b/.env
@@ -1,1 +1,2 @@
 VITE_CLERK_PUBLISHABLE_KEY=pk_test_aW5mb3JtZWQtZWxlcGhhbnQtODIuY2xlcmsuYWNjb3VudHMuZGV2JA
+VITE_IMG=952dee403a39a4096c59faa0fd664da2
