--- a/package.json
+++ b/package.json
@@ -16,9 +16,10 @@
     "axios": "^1.9.0",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
+    "react-hot-toast": "^2.5.2",
     "react-icons": "^5.5.0",
     "react-router-dom": "^7.5.3",
-    "sweetalert2": "^11.19.1",
+    "sweetalert2": "^11.21.0",
     "swiper": "^11.2.6"
   },
   "devDependencies": {
