--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "@clerk/clerk-react": "^5.31.1",
     "@smastrom/react-rating": "^1.5.0",
+    "@stripe/stripe-js": "^7.3.0",
     "@tanstack/react-query": "^5.75.1",
     "axios": "^1.9.0",
     "react": "^19.0.0",
