--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@stripe/stripe-js": "^7.3.0",
     "@tanstack/react-query": "^5.75.1",
     "axios": "^1.9.0",
+    "firebase": "^11.9.1",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "react-hot-toast": "^2.5.2",
